--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   animations: ^2.0.6
   http: ^0.13.6
+  firebase_core: ^2.0.0
+  cloud_firestore: ^4.0.0
 
 dev_dependencies:
   flutter_test:
