--- a/.github/workflows/flutter-web-to-docs.yml
+++ b/.github/workflows/flutter-web-to-docs.yml
@@ -2,8 +2,6 @@ name: Copy Web Build to Docs Only
 
 on:
   push:
-    paths:
-      - 'build/web/**'
     branches:
       - main
 
@@ -14,6 +12,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.6'
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Flutter Web
+        run: flutter build web --base-href /infoethics-quiz/
 
       - name: Copy build/web to docs/
         run: |
