--- a/.github/workflows/flutter-web-to-docs.yml
+++ b/.github/workflows/flutter-web-to-docs.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Commit and push changes
         env:
-          TOKEN: ${{ secrets.GH_PAT }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
