--- a/.github/workflows/flutter-web-to-docs.yml
+++ b/.github/workflows/flutter-web-to-docs.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -31,12 +33,9 @@ jobs:
           cp -r build/web/* docs/
 
       - name: Commit and push changes
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
           git add docs/
           git commit -m "📦 自動更新: build/web → docs" || echo "No changes to commit"
-          git push
+          git push origin main
